# skillzy

./: CONTRIBUTING.md  Cargo.toml  README.md  jakefile.toml  package.json  pre-install.js  start.js  uninstall.js
scripts/: version_bump.py
skills/skillzy/: SKILL.md
src/: check.rs  initialization.rs  main.rs  validation.rs
testfiles/: invalid-compat.md  invalid-desc.md  invalid-license.md  invalid-meta.md  invalid-name.md  invalid-tools.md  valid.md
