[package]
name = "skillzy"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/AstraBert/skillzy"
description = "Initialize and validate skills according to the specification adopted by agentskills.io and skills.sh"
keywords = ["skills", "coding-agent", "cli", "validation"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
markdown-frontmatter = "0.5.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
